test/message/stdin_messages.chakracore.out
[stdin]
[stdin]:1
'use strict'; with(this){__filename}
              ^^^^^

SyntaxError: 'with' statements are not allowed in strict mode
   at createScript (vm.js:*:*)
   at runInThisContext (vm.js:*:*)
   at Anonymous function ([stdin]-wrapper:*:*)
   at Module.prototype._compile (module.js:*:*)
   at evalScript (bootstrap_node.js:*:*)
   at Anonymous function (bootstrap_node.js:*:*)
   at emitNone (events.js:*:*)
   at emit (events.js:*:*)
   at endReadableNT (_stream_readable.js:*:*)
   at _combinedTickCallback (internal/process/next_tick.js:*:*)
42
42
[stdin]:1
throw new Error("hello")
^

Error: hello
   at Global code ([stdin]:*:*)
   at Script.prototype.runInThisContext (vm.js:*:*)
   at runInThisContext (vm.js:*:*)
   at Anonymous function ([stdin]-wrapper:*:*)
   at Module.prototype._compile (module.js:*:*)
   at evalScript (bootstrap_node.js:*:*)
   at Anonymous function (bootstrap_node.js:*:*)
   at emitNone (events.js:*:*)
   at emit (events.js:*:*)
   at endReadableNT (_stream_readable.js:*:*)
[stdin]:1
'use strict'; throw new Error("hello")
              ^

Error: hello
   at Global code ([stdin]:*:*)
   at Script.prototype.runInThisContext (vm.js:*:*)
   at runInThisContext (vm.js:*:*)
   at Anonymous function ([stdin]-wrapper:*:*)
   at Module.prototype._compile (module.js:*:*)
   at evalScript (bootstrap_node.js:*:*)
   at Anonymous function (bootstrap_node.js:*:*)
   at emitNone (events.js:*:*)
   at emit (events.js:*:*)
   at endReadableNT (_stream_readable.js:*:*)
100
[stdin]:1
'use strict'; var x = 100; y = x;
                           ^

ReferenceError: Variable undefined in strict mode
   at Global code ([stdin]:*:*)
   at Script.prototype.runInThisContext (vm.js:*:*)
   at runInThisContext (vm.js:*:*)
   at Anonymous function ([stdin]-wrapper:*:*)
   at Module.prototype._compile (module.js:*:*)
   at evalScript (bootstrap_node.js:*:*)
   at Anonymous function (bootstrap_node.js:*:*)
   at emitNone (events.js:*:*)
   at emit (events.js:*:*)
   at endReadableNT (_stream_readable.js:*:*)

vm.js:*
    return realRunInThisContext.call(this, options);
    ^
10

vm.js:*
    return realRunInThisContext.call(this, options);
    ^
10
done